[gd_scene load_steps=4 format=3 uid="uid://d2hkn56haw8jq"]

[ext_resource type="Script" path="res://scripts/shotgun.gd" id="1_je5py"]
[ext_resource type="Texture2D" uid="uid://cdxp5n0glh7r7" path="res://img/weapons.png" id="2_yqd8m"]
[ext_resource type="Script" path="res://scenes/weapons/reload_timer.gd" id="3_yalno"]

[node name="shotgun" type="Node2D"]
scale = Vector2(0.9, 0.9)
script = ExtResource("1_je5py")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yqd8m")
region_enabled = true
region_rect = Rect2(30.6202, 49.9997, 28.3774, 15.0476)

[node name="R1" type="RayCast2D" parent="."]
collision_mask = 2

[node name="R2" type="RayCast2D" parent="."]
collision_mask = 2

[node name="R3" type="RayCast2D" parent="."]
collision_mask = 2

[node name="R4" type="RayCast2D" parent="."]
collision_mask = 2

[node name="R5" type="RayCast2D" parent="."]
collision_mask = 2

[node name="fire_cd_timer" type="Timer" parent="."]

[node name="reload_timer" type="Timer" parent="."]
one_shot = true
script = ExtResource("3_yalno")

[connection signal="timeout" from="fire_cd_timer" to="." method="_on_fire_cd_timer_timeout"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
